[metadata]
name = helm-impact
version = 0.1.0
description = A Helm chart impact analysis tool
author = Saurabh Shinde
author_email = shindesaurabhpict@gmail.com
license = GPL-3.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License::OSI Approved::GNU General Public License v3 (GPLv3)
    Programming Language::Python::3
    Programming Language::Python::3::Only
    Programming Language::Python::Implementation::Cpython

[options]
packages = find:
install_requires =
    pyyaml
    rich
py_modules =
    main

[options.packages.find]
exclude =
    tests/*

[options.entry_points]
console_scripts =
    helm-impact = main:main

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.tox,venv